Changed Main() to abandon complex constructions of streaming methods